@startuml
!theme plain
skinparam linetype ortho

entity "Usuarios" as usuario {
  * idUsuario : INTEGER <<PK>>
  --
  * nombres : TEXT
  * correo : TEXT
  * clave : TEXT
  * rol : TEXT
}

entity "Salas" as sala {
  * idSala : INTEGER <<PK>>
  --
  * nombre : TEXT
  * codigo : TEXT
  * idHost : INTEGER <<FK>>
  * estado : TEXT
  * fecha_creacion : DATETIME
}

entity "Participantes" as participante {
  * idParticipante : INTEGER <<PK>>
  --
  * idSala : INTEGER <<FK>>
  * idUsuario : INTEGER <<FK>>
  * estado : TEXT
  * fecha_union : DATETIME
}

entity "Solicitudes" as solicitud {
  * idSolicitud : INTEGER <<PK>>
  --
  * idSala : INTEGER <<FK>>
  * idUsuario : INTEGER <<FK>>
  * estado : TEXT
  * fecha_solicitud : DATETIME
}

entity "Mensajes" as mensaje {
  * idMensaje : INTEGER <<PK>>
  --
  * idSala : INTEGER <<FK>>
  * idUsuario : INTEGER <<FK>>
  * contenido : TEXT
  * fecha_envio : DATETIME
}

entity "Archivos" as archivo {
  * idArchivo : INTEGER <<PK>>
  --
  * idSala : INTEGER <<FK>>
  * idUsuario : INTEGER <<FK>>
  * nombre : TEXT
  * ruta_local : TEXT
  * peso : INTEGER
  * fecha_envio : DATETIME
}

usuario ||--o{ sala : "crea (Host)"
usuario ||--o{ participante : "se une como"
usuario ||--o{ solicitud : "realiza"
usuario ||--o{ mensaje : "envía"
usuario ||--o{ archivo : "sube"

sala ||--o{ participante : "contiene"
sala ||--o{ solicitud : "recibe"
sala ||--o{ mensaje : "aloja"
sala ||--o{ archivo : "contiene"
@enduml
